traversal.snake.Snake.scala.error
Erreur de compilation :
Snake:22: error: ')' expected but 'if' found.
        if (estFaceMur()) {
        ^Snake:28: error: ';' expected but 'return' found.
        return true
        ^